Fix: Settings panel alignment

--- a/packages/components/keyboard-shortcuts/index.module.css
+++ b/packages/components/keyboard-shortcuts/index.module.css
@@ -20,11 +20,6 @@
   text-align: center;
 }
 
-.buttonWrapper {
-  /* display: block; */
-  /* position: relative; */
-}
-
 .closeButton {
   position: absolute;
   top: 0;
@@ -38,7 +33,6 @@
   list-style: none;
   padding: 1em;
   margin: 0 auto;
-  /* width: 50%; */
 }
 
 .listItem {
